--- a/src/index.css
+++ b/src/index.css
@@ -24,22 +24,18 @@ body {
 }
 
 .heading {
+  color: rgba(178, 84, 8, 0.7);
   text-align: center;
-  text-decoration: solid;
+  font-size: 3rem;
 }
 
 .paraText {
-  color: #000;
+  color: #fff;
   max-width: 500px;
-  margin: 2rem auto;
-  font-size: 2rem;
+  margin: 0.5rem auto;
+  font-size: 1.8rem;
   line-height: 40px;
   text-align: center;
-}
-
-.paraText:hover {
-  color: red;
-  transition: all 1s ease-out;
 }
 
 .heroPage {
@@ -47,7 +43,7 @@ body {
 }
 
 .Quote {
-  color: #000;
+  color: #fff;
   max-width: 500px;
   margin: 5rem auto;
   font-size: 2rem;
@@ -55,17 +51,12 @@ body {
   text-align: center;
 }
 
-.Quote:hover {
-  color: red;
-  transition: all 1s ease-out;
-}
-
 .container {
   max-width: 100%;
   height: 100vh;
-  padding: 7rem;
+  padding: 3rem;
   margin: 0 auto;
-  background-color: rgb(246, 228, 228);
+  background-color: rgb(48, 45, 45);
 }
 
 .flex-header {
@@ -79,21 +70,16 @@ a {
   list-style: none;
   text-decoration: none;
   font-size: 1.5rem;
-  color: #000;
+  color: rgba(245, 144, 62, 0.7);
   transition: all 1s ease-out;
 }
 
 a:hover {
   border-bottom: 1px solid #f2f2f2;
-  color: red;
-}
-
-.panel {
-  padding: 3rem;
+  color: #dac394;
 }
 
 table {
-  width: 70%;
   max-width: 590px;
   margin: 5rem auto;
   border: 1px solid #fff;
@@ -107,9 +93,8 @@ table {
 tr,
 td {
   border: 1px solid #fff;
-  border-collapse: collapse;
   text-align: center;
-  background-color: rgb(224, 224, 224);
+  background-color: rgb(217, 141, 0);
 }
 
 tbody td {
@@ -118,7 +103,7 @@ tbody td {
 
 tr.result td {
   text-align: right;
-  padding: 1rem 0.5rem;
+  padding: 2rem 0.5rem;
   background-color: #848693;
   color: #fff;
   font-size: 1.25rem;
@@ -126,7 +111,7 @@ tr.result td {
 
 button {
   width: 100%;
-  height: 5vh;
+  height: 10vh;
   border: none;
   transition: background-color 0.2s ease-in-out;
 }
